Update Instruction.java
- Use JDK 21 Features
- Create Instruction#ids